# qt-forbot-course

./: .clang-format  .gitignore  CMakeLists.txt  README.md
part-1-about-qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
part-2-serial-communication/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
part-4-bluetooth-communication/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
part-5-about-qml/: CMakeLists.txt
part-5-about-qml/qt-qml/: CMakeLists.txt  main.cpp  main.qml
part-5-about-qml/qt-quick-dialog/: CMakeLists.txt  main.qml  qtquickcontrols2.conf
part-5-about-qml/qt-widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
part-6-cpp-qml-integration/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  rover.cpp  rover.h
part-7-freezing-ui/: CMakeLists.txt  main.cpp  worker.h
part-8-multithreading/: CMakeLists.txt
part-8-multithreading/non-freezing-ui/: CMakeLists.txt  controller.h  main.cpp  main.qml  worker.h
part-8-multithreading/non-freezing-ui-synchronization/: CMakeLists.txt  controller.h  main.cpp  main.qml  worker.h
part-9-multitasking/: CMakeLists.txt
part-9-multitasking/qprocess-avrdude/: CMakeLists.txt  main.cpp  main.qml  processrunner.h  serialportdevices.h
part-9-multitasking/tcp-chat/: CMakeLists.txt
part-9-multitasking/tcp-chat/client/: client.h  main.cpp  main.qml
part-9-multitasking/tcp-chat/server/: main.cpp  main.qml  server.h
